# Starboard-4

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SUMMARY.md  build.rs  docker-compose.yml  migrate.sql  rustfmt.toml  sqlx-data.json  test.txt
.sqlx/: query-012a5e27e8338841c7639a51abc283c2f0ab780d3b61691c98be6c6cb07ff719.json  query-018749d2c5df13cc9bcefe6a7cad5d957b60cdb4631d72727c1ff2f690cb5494.json  query-066998b6c842af003c90e4c71ae933524c0bef88b94b3dce92cc14e855852ad3.json  query-07968e9d46bb8092416c850fa3b0af62f9a28d603d7d3cc5877690e2c9c3ef4c.json  query-08d0ded05e0b03c89892109f492fee7fa6e7a47afd18bf4155524593ce92aaca.json  query-0b73a06177a4053dd91a029b196db5f718a2626c09ef951ac8df598ec60759b9.json  query-0dc8aed0db6fa6532389387fe514017d823ae1e8fe554a78c46ef6ca81b9c42c.json  query-0f8091a3bbaf9d14d2fec8eb5467d2b350b6175d35596e5576b4afb078f8bc7b.json  query-0ffc05838685c5cdefbc6c795bba90b0258e037813f8ff476c3ce47153e3616b.json  query-118d39bf0d11f6414f1e34de25620d3b09c261e29eeac345d7ad7520c454307a.json  query-133dbe81267943c58e590bdabc75db56b4298e6266d7dd09c9b7eba0948f1a3b.json  query-18672a6e3dd3c7d703acbbd3ded2d36793f5f7272eedd8b47d468c4ec0959621.json  query-1e3823ed8de2274b2c2a479c0a03934943a9559bfbd646bf44b43b0d2a02fb6c.json  query-201fa92c2d9fd3a0cd3f8267daa254f20b065d76f31f64aa6b44184428517f46.json  query-2111de885c5b267c61a1f639a990e1f40114a56e5303add22b8e5a348080999d.json  query-227c9360ea995f18ebc80c8092e6c11984a800865d5406a1c865a8ee712c144a.json  query-22d422ce0c5ebeed7f0281b848e9cf0bed37de6a45d1c211367530323bcb1b34.json  query-26ba63804320b440dba9096dedb959767348c0ad53144f02220af3f7255cb5d6.json  query-2700fb5c143af16f3d71e3885bb5e4320cdd533546b741765721d4fec9a24df7.json  query-297582967c8cfa473eb7f7cd66784e3f47df7896a9234b12f24b02fc500e6ad7.json  query-29f33bd6db6938eafebc842e5a8ccdc22c67299762ba828c12f4da6f3b28fb69.json  query-2a46ead99e78a1709b76021c12fe29efbd86668d704b9701f4d5af8d05054113.json  query-2ad322ad75dd8bc977edfbfe65ed5ef7a4d0b561ebd2a885e2036ee91dbc442c.json  query-2aeb2b9fe9a5f0cbc2a93dca1e395164009c0a97fbb3fd9a00f7675e60eada79.json  query-2dbccc87a00302144edb336fe6c8d8f74bb00dd1fc1db8b31c63ede846dfc899.json  query-2dc58b352d1b425b1b3c94e71b0b4f3dfd052c19dddd79f767a82fad9c78dc7f.json  query-373e7d1fb45257f07862ef685e9e83c1b22dba9ecef707fd904f12a491ca4f22.json  query-374879d017c0a2ea236967ecdf63041b0ae471ee8d8beb4ff8c1824fdbd09116.json  query-382d03439a68e5be3e01510b19594da6cb84cfb4ab8c104112623bd456450bf8.json  query-38f5219ee87e5959d6a2699f356e1d2e5ddd337c69fb84a1facba971c00c6491.json  query-4210d1f0ce64aca7813b63421f3af67b1a0c3c586e0507f52754bd50c75189f3.json  query-443ac1e7a47fe77b43199d6f45b73fc3eedd89069d6ddec9151dfcf1f00dd5d0.json  query-44f209f62dafe372cc88ee5b7e1238b3cde07686c6df64a57e0c192baa11ffc4.json  query-4754e91a3dbb3637a0082b056d6bec3e6e5517dec6d4aec209a00cc044f7d191.json  (+102 more)
about/: premium.md  troubleshooting.md
crates/common/: Cargo.toml
crates/common/src/: config.rs  constants.rs  dashset_lock.rs  lib.rs
crates/common/src/parsing/: mod.rs  relative_duration.rs
crates/database/: Cargo.toml  sqlx-data.json
crates/database/migrations/: 20220622162744_initial.sql  20230122020548_add_exclusive_starboards.sql  20230123185321_add_on-delete_setting.sql  20230126051155_regex_filtering_for_starboards.sql
crates/database/src/: client.rs  lib.rs
crates/database/src/helpers/: mod.rs
crates/database/src/helpers/from/: mod.rs  starboard.rs  starboard_settings.rs
crates/database/src/helpers/settings/: autostar.rs  filters.rs  overrides.rs  starboard.rs
crates/database/src/models/: autostar_channel.rs  autostar_channel_filter_group.rs  exclusive_group.rs  filter.rs  filter_group.rs  guild.rs  member.rs  message.rs  patron.rs  permrole.rs  permrole_starboard.rs  posrole.rs  starboard.rs  starboard_filter_group.rs  starboard_message.rs  starboard_override.rs  starboard_override_values.rs  starboard_settings.rs  user.rs  vote.rs  xprole.rs
crates/database/src/pipelines/locks/: autostar.rs  mod.rs  starboard.rs
crates/database/src/validation/: mod.rs  name.rs  regex.rs  relative_duration.rs  starboard_settings.rs
crates/errors/: Cargo.toml
crates/errors/src/: err_str.rs  error.rs  http_status.rs  lib.rs  pg_error.rs
crates/website/: Cargo.toml  LICENSE  README.md  input.css  package-lock.json  package.json  tailwind.config.js
crates/website/src/: app.rs  lib.rs  main.rs
crates/website/src/auth/: context.rs  jwt.rs  mod.rs  oauth2.rs
crates/website/src/site/: mod.rs
crates/website/src/site/components/: card.rs  emoji.rs  fspopup.rs  mod.rs  navbar.rs  picker.rs  popup.rs  toasted_susp.rs
crates/website/src/site/components/form/: err.rs  label.rs  mod.rs
crates/website/src/site/components/picker/: base.rs
crates/website/src/site/errors/: mod.rs  not_found.rs
crates/website/src/site/routes/: mod.rs
crates/website/src/site/routes/api/: get_user.rs  mod.rs
crates/website/src/site/routes/auth/: login.rs  mod.rs  redirect.rs
crates/website/src/site/routes/dashboard/: mod.rs  server_list.rs
crates/website/src/site/routes/servers/: mod.rs  server_list.rs
crates/website/src/site/routes/servers/api/: get_guilds.rs  mod.rs
crates/website/src/site/routes/servers/id/: mod.rs  overview.rs  sidebar.rs
crates/website/src/site/routes/servers/id/api/: get_channels.rs  get_guild.rs  mod.rs
crates/website/src/site/routes/servers/id/components/: channel_picker.rs  guild_suspense.rs  mod.rs
crates/website/src/site/routes/servers/id/starboards/: add.rs  mod.rs
crates/website/src/site/routes/servers/id/starboards/api/: create.rs  delete.rs  get_starboards.rs  mod.rs  update.rs
crates/website/src/site/routes/servers/id/starboards/id/: behavior.rs  embed.rs  filters.rs  mod.rs  regex.rs  requirements.rs  style.rs
crates/website/src/site/routes/servers/id/starboards/id/api/: get.rs  mod.rs  update.rs
crates/website/src/site/routes/website/: home.rs  mod.rs
crates/website/src/utils/: icon.rs  mod.rs
crates/website/src/validation/: emoji.rs  mod.rs
crates/website/style/: output.css
(+520 files in other folders)
