[package]
name = "starboard"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-gateway = "0.17.0"
twilight-http = "0.17.0"
twilight-model = "0.17.0"
twilight-validate = "0.17.0"
twilight-util = { version = "0.17.0", features = ["builder", "snowflake"] }
twilight-mention = "0.17.0"
twilight-standby = "0.17.0"

twilight-interactions = { version = "0.17.0", git = "https://github.com/ghostlylake/twilight-interactions", branch = "twilight-0.17"}

async-trait = "0.1.89"
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
dotenv = "0.15.0"
sqlx = { version = "0.6.3", features = ["macros", "postgres", "offline", "runtime-tokio-rustls", "chrono", "json"]}
chrono = "0.4.41"
serde_json = "1.0"
serde = "1.0.219"
emojis = "0.7.2"
dashmap = "5.5.3"
regex = "1.11.2"
lazy_static = "1.5.0"
humantime = "2.2.0"
reqwest = "0.11.27"
sentry = "0.31.8"
floodgate = "0.5.1"
thousands = "0.2.0"
snafu = { version = "0.7.5", features = ["backtraces-impl-backtrace-crate"] }
serde_with = "3.14.0"
psutil = "3.3.0"
rust-fuzzy-search = "0.1.1"
moka = { version = "0.11.3", features = ["future"] }
cached = "0.44.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
rustls = { version = "0.23.35" }
