[package]
name = "starboard"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-gateway = "0.17.1"
twilight-http = "0.17.1"
twilight-model = "0.17.1"
twilight-validate = "0.17.0"
twilight-util = { version = "0.17.0", features = ["builder", "snowflake"] }
twilight-mention = "0.17.0"
twilight-standby = "0.17.0"

twilight-interactions = { version = "0.17.0", git = "https://github.com/ghostlylake/twilight-interactions", branch = "twilight-0.17" }

async-trait = "0.1.89"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio", "tls-rustls-aws-lc-rs", "chrono", "json"] }
chrono = "0.4.42"
serde_json = "1.0"
serde = "1.0.228"
emojis = "0.8.0"
dashmap = "6.1.0"
regex = "1.12.2"
lazy_static = "1.5.0"
humantime = "2.3.0"
reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls"] }
sentry = { version = "0.46.0", default-features = false, features = ["reqwest", "rustls", "backtrace", "contexts", "debug-images", "panic"] }
floodgate = "0.5.1"
thousands = "0.2.0"
snafu = { version = "0.8.9", features = ["backtraces-impl-backtrace-crate"] }
serde_with = "3.16.1"
psutil = "3.3.0"
rust-fuzzy-search = "0.1.1"
moka = { version = "0.11.3", features = ["future"] }
cached = "0.56.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
rustls = { version = "0.23.35" }
