[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
errors = {path = "../errors", optional = true}

dashmap = { version = "5.5.0", optional = true }
dotenv = { version = "0.15.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
regex = { version = "1.9.5", optional = true }

[features]
backend = ["dep:errors", "dep:dotenv", "dep:dashmap", "dep:lazy_static", "dep:regex"]
