[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
common = {path = "../common"}
errors = {path = "../errors", optional = true}

serde_json = "1.0"
serde = "1.0.171"
serde_with = "3.0.0"
chrono = "0.4.26"
regex = "1.9.1"

sqlx = { version = "0.6.3", features = [
    "macros",
    "postgres",
    "offline",
    "runtime-tokio-rustls",
    "chrono",
    "json",
], optional = true }
futures = { version = "0.3.28", optional = true }
humantime = "2.1.0"
snafu = "0.7.5"

[features]
backend = ["dep:sqlx", "dep:futures", "dep:errors"]
